# jwt-email-auth

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  manage.py  mixins.py  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.cfg  utils.py  views.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs.yml  main.yml  release.yml  test.yml
authentication/: apps.py  authentication.py  exceptions.py  models.py  permissions.py  selectors.py  serializers.py  services.py  settings.py  tokens.py  utils.py  views.py
docs/: index.md  rotation.md  setup.md  usage.md
docs/css/: docs.css
jwt_email_auth/: apps.py  authentication.py  definition.py  exceptions.py  fields.py  models.py  permissions.py  schema.py  serializers.py  settings.py  tokens.py  typing.py  utils.py  views.py
jwt_email_auth/locale/fi/LC_MESSAGES/: django.mo  django.po
jwt_email_auth/rotation/: apps.py  models.py
jwt_email_auth/rotation/migrations/: 0001_initial.py
rotation/: index.html
search/: search_index.json
setup/: index.html
tests/: conftest.py  helpers.py  test_auth.py  test_auth_and_perm_classes.py  test_fields.py  test_models.py  test_schema.py  test_serializers.py  test_tokens.py  test_utils.py  test_views.py
tests/api_tests/: api-requests.http
tests/django/: settings.py  urls.py
tests/project/: asgi.py  settings.py  urls.py
tests/templates/: email_test_template.html  swagger-ui.html
usage/: index.html
