[metadata]

name = jwt-email-auth
version = 0.0.5
author = Matti Lamppu
author_email = lamppu.matti.akseli@gmail.com
description = JWT authentication from email login codes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrThearMan/jwt-email-auth
project_urls =
    Bug Tracker = https://github.com/MrThearMan/jwt-email-auth/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8